--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,106 @@
-.App {
+.app-container {
+  max-width: 700px;
+  margin: 30px auto;
+  padding: 20px;
+  background: #A8FBD3;
+  border-radius: 20px;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app-title {
+  font-size: 2rem;
+  color: #4FB7B3;
+  margin-bottom: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.total-expense {
+  font-size: 1.3rem;
+  margin: 10px 0 25px;
+  color: #4FB7B3;
+  font-weight: 600;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.expense-item {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background: #e2e8f0;
+  padding: 10px 15px;
+  margin: 10px 0;
+  border-radius: 12px;
+}
+
+.expense-item button {
+  margin-left: 8px;
+  background-color: #31326F;
   color: white;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 8px;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.expense-item button:hover {
+  background-color: #1e40af;
+}
+.expense-form {
+  background: #e0f2fe;
+  padding: 20px;
+  border-radius: 16px;
+  margin-bottom: 25px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.expense-form h2 {
+  color: #0f172a;
+  margin-bottom: 15px;
+}
+
+.form-inputs {
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-bottom: 15px;
+}
+
+.form-inputs input {
+  padding: 10px;
+  border-radius: 8px;
+  border: 1px solid #94a3b8;
+  font-size: 1rem;
+  width: 180px;
+}
+
+.add-btn {
+  background-color: #2563eb;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 10px;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background 0.3s;
+}
+
+.add-btn:hover {
+  background-color: #1e40af;
+}
+.chart-container {
+  margin-top: 30px;
+  background: #f8fafc;
+  border-radius: 16px;
+  padding: 20px;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.05);
+}
+
+.chart-title {
+  text-align: center;
+  font-size: 1.3rem;
+  color: #4FB7B3;
+  margin-bottom: 10px;
+}
+.form-inputs select{
+  border-radius: 10px;
+   border: 1px solid #94a3b8;
 }
